--- a/d010/estilo/style.css
+++ b/d010/estilo/style.css
@@ -74,7 +74,10 @@ header > p {
     font-family: var(--fonte-destaque);
     font-size: 1.2em;
     max-width: 600px;
+    padding-right: 10px;
+    padding-left: 10px;
     margin: auto;
+    padding-bottom: 50px;
     text-shadow: 2px 2px 0px black;
 
 
