--- a/d012/estilo/style.css
+++ b/d012/estilo/style.css
@@ -4,9 +4,21 @@
     margin: 0px;
     padding: 0px;
 }
+:root{
+    --font1: verdana, geneva, tahoma, sans-serif ;
+    --font2: "Sriracha", cursiva;
+    --font3: "Passion One", sans-serif; 
+}
+
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap'); 
+
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 header{
     background-color: black;
@@ -16,6 +28,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font3);
+    font-size: 10vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -33,6 +47,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font2);
+    font-size: 3.5vw;
 }
 section.normal{
     background-color: white;
@@ -44,7 +60,7 @@ section.imagem{
 
 }
 section.imagem > p{
-    width: 300px;
+    display: inline-block;
     background-color: black;
 }
 footer{
